--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>Contact Me</h2>
         <div class="contact-info">
             <p><strong>Phone:</strong> +91-8657821248</p>
-            <p><strong>Email:</strong> <a href="mailto:pavan.mangutkar@example.com">pawanmangutkar777@gmail.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:pawanmangutkar777@gmail.com">pawanmangutkar777@gmail.com</a></p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/pavan-mangutkar-49688a22b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">linkedin.com/in/pavan-mangutkar</a></p>
         </div>
     </section>
